hphp/hack/test/typecheck/cconst.php.exp
File "cconst.php--cconst.hhi", line 7, characters 13-15:
Wrong type hint (Typing[4338])
  File "cconst.php--cconst.hhi", line 7, characters 9-11:
  Expected `int`
  File "cconst.php--cconst.hhi", line 7, characters 19-25:
  But got `string`
File "cconst.php--cconst.php", line 13, characters 19-27:
Invalid argument (Typing[4110])
  File "cconst.php--cconst.php", line 5, characters 3-8:
  Expected `string`
  File "cconst.php--cconst.hhi", line 5, characters 9-11:
  But got `int`
